--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ FOOTER
 .nav__link2,
 .nav__link--primary2 {
     font-size: 16px;
-    color: rgb(138, 209, 227);
+    color: white;
     margin: 0 auto;
     margin-bottom: 12px;
     margin-right: 16px;
